--- a/src/app/components/stream.component.css
+++ b/src/app/components/stream.component.css
@@ -23,6 +23,11 @@
 	}
 }
 
+html {
+  width: 100%;
+  margin: 0;
+}
+
 .main-container {
 	padding-top:  2%;
 	overflow: hidden;
